<resources>
    <string name="app_name">My Workout Pal</string>
    <string name="button_addRoutine">Add Routine</string>
    <string name="button_editRoutine">Edit Routine</string>
    <string name="hint_routineTitle">Exercise Title</string>
    <string name="hint_routineDescription">Reps</string>
    <string name="hint_routineSets">Sets</string>
    <string name="menu_addRoutine">Add</string>
    <string name="menu_cancelRoutine">Cancel</string>
    <string name="enter_routine_title">Please enter a Reminder Title</string>
    <string name="save_routine">Save Reminder</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_routine_image">Select reminder image</string>
    <string name="change_routine_image">Change reminder image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deleteRoutine">Delete</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="menu_routine">New Routine</string>
    <string name="menu_report">Report</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="aboutus_title">My Workout Pal</string>
    <string name="aboutus_message"> My Workout Pal</string>
    <string name="messageLoading"> Loading</string>
    <string name="nav_header_desc"> My Workout Pal</string>
    <string name="nav_header_title"> My Workout Pal</string>
    <string name="nav_header_subtitle"> My Workout Pal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_routine">New Routine</string>
    <string name="action_report">Your Routines</string>
    <string name="action_edit">Edit Routine</string>

    <string name="menu_report_all">All Routines</string>

    <string name="select_profile_image">Select Profile Image</string>

    <string name="favourites_title">Favourite Routines</string>

    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>

</resources>
