<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_routine"
            android:icon="@drawable/ic_menu_routine_foreground"
            android:title="@string/menu_routine" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_your_routines"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_all_routines"
            android:icon="@drawable/ic_all_user_routines"
            android:title="@string/menu_report_all" />

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favorites_foreground"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_aboutus_foreground"
            android:title="@string/menu_about" />
    </group>

    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
